Fixes footer positioning on page when content is too small

--- a/less/768.less
+++ b/less/768.less
@@ -60,10 +60,14 @@ COLOURS
 	}
 }
 // 10 CONTENT 				============================================================================= 
+.container {
+	position: relative;
+	min-height: 100%;
+}
 .content {
 	max-width: 700px;
 	margin: 0 auto;
-	min-height: 100%;
+	height: 100%;
 	background: @p3;
 	.drop-shadow(0,1em,1em,0.6);
 }
@@ -72,6 +76,9 @@ COLOURS
 // 13 CONTENTINFO 			=============================================================================
 //"Footer"
 footer {
+	position: absolute;
+	bottom: 0;
+	left: 0;
 } 
 // 14 GLOBAL OBJECTS 		============================================================================= 
 // 15 VENDOR-SPECIFIC 		============================================================================= 
